@@ -39,14 +39,14 @@ import java.io.*;
  * <code>endObject</code> methods which make and bound object values. All of
  * these methods return the JSONWriter instance, permitting a cascade style. For
  * example,
- * 
+ *
  * <pre>
  * new JSONWriter(myWriter).object().key(&quot;JSON&quot;).value(&quot;Hello, World!&quot;)
  *     .endObject();
  * </pre>
- * 
+ *
  * which writes
- * 
+ *
  * <pre>
  * {&quot;JSON&quot;:&quot;Hello, World!&quot;}
  * </pre>
@@ -56,7 +56,7 @@ import java.io.*;
  * you. Objects and arrays can be nested up to 20 levels deep.
  * <p>
  * This can sometimes be easier than using a JSONObject to build a string.
- * 
+ *
  * @author JSON.org
  * @version 2
  */
@@ -103,7 +103,7 @@ public class JSONWriter {
 
     /**
      * Append a value.
-     * 
+     *
      * @param s A string value.
      * @return this
      * @throws JSONException If the value is out of sequence.
@@ -134,7 +134,7 @@ public class JSONWriter {
      * Begin appending a new array. All values until the balancing
      * <code>endArray</code> will be appended to this array. The
      * <code>endArray</code> method must be called to mark the array's end.
-     * 
+     *
      * @return this
      * @throws JSONException If the nesting is too deep, or if the object is
      *         started in the wrong place (for example as a key or after the end
@@ -152,7 +152,7 @@ public class JSONWriter {
 
     /**
      * End something.
-     * 
+     *
      * @param m Mode
      * @param c Closing character
      * @return this
@@ -176,7 +176,7 @@ public class JSONWriter {
     /**
      * End an array. This method most be called to balance calls to
      * <code>array</code>.
-     * 
+     *
      * @return this
      * @throws JSONException If incorrectly nested.
      */
@@ -187,7 +187,7 @@ public class JSONWriter {
     /**
      * End an object. This method most be called to balance calls to
      * <code>object</code>.
-     * 
+     *
      * @return this
      * @throws JSONException If incorrectly nested.
      */
@@ -198,7 +198,7 @@ public class JSONWriter {
     /**
      * Append a key. The key will be associated with the next value. In an
      * object, every value must be preceded by a key.
-     * 
+     *
      * @param s A key string.
      * @return this
      * @throws JSONException If the key is out of place. For example, keys do
@@ -229,7 +229,7 @@ public class JSONWriter {
      * Begin appending a new object. All keys and values until the balancing
      * <code>endObject</code> will be appended to this object. The
      * <code>endObject</code> method must be called to mark the object's end.
-     * 
+     *
      * @return this
      * @throws JSONException If the nesting is too deep, or if the object is
      *         started in the wrong place (for example as a key or after the end
@@ -251,7 +251,7 @@ public class JSONWriter {
 
     /**
      * Pop an array or object scope.
-     * 
+     *
      * @param c The scope to close.
      * @throws JSONException If nesting is wrong.
      */
@@ -265,7 +265,7 @@ public class JSONWriter {
 
     /**
      * Push an array or object scope.
-     * 
+     *
      * @param c The scope to open.
      * @throws JSONException If nesting is too deep.
      */
@@ -281,7 +281,7 @@ public class JSONWriter {
     /**
      * Append either the value <code>true</code> or the value <code>false</code>
      * .
-     * 
+     *
      * @param b A boolean.
      * @return this
      * @throws JSONException
@@ -292,18 +292,18 @@ public class JSONWriter {
 
     /**
      * Append a double value.
-     * 
+     *
      * @param d A double.
      * @return this
      * @throws JSONException If the number is not finite.
      */
     public JSONWriter value(double d) throws JSONException {
-        return this.value(new Double(d));
+        return this.value(Double.valueOf(d));
     }
 
     /**
      * Append a long value.
-     * 
+     *
      * @param l A long.
      * @return this
      * @throws JSONException
@@ -314,7 +314,7 @@ public class JSONWriter {
 
     /**
      * Append an object value.
-     * 
+     *
      * @param o The object to append. It can be null, or a Boolean, Number,
      *        String, JSONObject, or JSONArray, or an object with a
      *        toJSONString() method.
